--- a/index.html
+++ b/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Midori Kocak</title>
+    <title>Islam KUMUS</title>
+    <style>
+        body {
+                margin: 0 auto;
+                max-width: 50am;
+                font-family: "Helvetica", "arial", sans-serif;
+                line-height: 1.5;
+                padding: 4em 1em;
+                color: #333;
+        }
+
+        h2 {
+            margin-top: 1em;
+            padding: 1em
+        }
+        h1,h2, strong {
+            color: #444
+        }
+    </style>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body>
 <header>
-    <h1>Midori Kocak</h1>
-    <img src="img/image.png" width="150" alt="Midori Kocak"/>
+    <h1>Islam KUMUS</h1>
+    <img src="img/image.jpg" width="150" alt="Islam KUMUS"/>
     <nav>
         <ul>
             <li><a href="#summary">Summary</a></li>
@@ -26,33 +44,26 @@
                 Summary
             </h2>
             <p>
-                A <b>software engineer</b> with 10+ years experience in <i>web development</i> who loves to share her knowledge with people.
+                A <b>software Cadet</b> with 10+ days experience in <i>web development</i> who loves to learn knowledge from people.
             </p>
         </section>
         <section id="work">
             <h2>Work</h2>
             <ul>
                 <li>
-                    <strong >McKinsey &amp; Company</strong><br>
-                    <a href="http://mckinsey.com" itemprop="url">mckinsey.com</a><br>
-                    <small>Senior Software Engineer</small>
+                    <strong > TDUB &amp; </strong><br>
+                    <a href="http://www.tdub.org.tr/" itemprop="url">tdub.org.tr</a><br>
+                    <small>GDU</small>
                     <br>
-                    March 2018 - Present<br>
+                    April 2018 - Present<br>
                 </li>
 
                 <li>
                     <strong >Freelancer</strong><br>
-                    <a href="http://github.com/midorikocak" itemprop="url">github.com/midorikocak</a><br>
-                    <small>Software Engineer</small>
+                    <a href="http://github.com/keumeu" itemprop="url">github.com/keumeu</a><br>
+                    <small>Software Student</small>
                     <br>
-                    September 2016 - February 2018<br>
-                </li>
-                <li>
-                    <strong >Massive Interactive</strong><br>
-                    <a href="http://massive.co" itemprop="url">massive.co</a><br>
-                    <small>Frontend Engineer</small>
-                    <br>
-                    August 2015 - August 2016<br>
+                    Novamber 2018 - Present<br>
                 </li>
             </ul>
         </section>
@@ -60,11 +71,11 @@
             <h2>Education</h2>
             <ul>
                 <li>
-                    <strong >Sabanci University</strong><br>
-                    <a href="http://sabanciuniv.edu" itemprop="url">sabanciuniv.edu</a><br>
-                    <small>Computer Science & Engineering</small>
+                    <strong > KHO </strong><br>
+                    <a href="http://www.kho.edu.tr/" itemprop="url"> KHO </a><br>
+                    <small> System Engineering </small>
                     <br>
-                    2006 - 2010<br>
+                    2008 - 2012<br>
                 </li>
             </ul>
         </section>
@@ -77,28 +88,13 @@
                 <li>
                     English - Fluent
                 </li>
-                <li>
-                    Italian - Fluent
-                </li>
-                <li>
-                    Czech - Intermediate
-                </li>
-                <li>
-                    Japanese - Beginner
-                </li>
             </ul>
         </section>
         <section id="skills">
             <h2>Skills</h2>
             <ol>
                 <li>
-                    PHP / MySQL
-                </li>
-                <li>
-                    HTML / CSS
-                </li>
-                <li>
-                    JavaScript (React / Vue / Elm)
+                    Valuation 
                 </li>
             </ol>
         </section>
@@ -108,14 +104,14 @@
     <h2>Social</h2>
     <nav>
         <ul>
-            <li><a href="http://linkedin.com/in/midorikocak">Linkedin</a></li>
+            <li><a href="https://twitter.com/keumeusa">Twitter</a></li>
         </ul>
     </nav>
     <section id="contact">
         <h2>Contact</h2>
         <ul>
             <li>
-                <a href="mailto:mtkocak@gmail.com">E-mail</a>
+                <a href="mailto:keumeusa@gmail.com">E-mail</a>
             </li>
         </ul>
     </section>
